openshift/servicemesh/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf2-vs
spec:
  hosts:
  - "*"
  gateways:
  - leaf2-gateway
  http:
  - route:
    - destination:
        host: leaf2
        port:
          number: 8080
